--- a/ocean-waste/package.json
+++ b/ocean-waste/package.json
@@ -33,9 +33,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-toastify": "^10.0.5",
+    "react-use-websocket": "^4.8.1",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
