--- a/ocean-waste/package.json
+++ b/ocean-waste/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@clerk/nextjs": "^5.1.5",
+    "@clerk/nextjs": "^5.2.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.6.0",
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -48,7 +49,7 @@
     "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
